--- a/src/main/resources/templates/private/CostumerDashboard.html
+++ b/src/main/resources/templates/private/CostumerDashboard.html
@@ -39,7 +39,7 @@
                 <span class="user" id="name"></span>
                 <span>|</span>
                 <form th:action="@{/logout}" method="POST">
-                    <input type="submit" class="close" value="Logout"></input>
+                    <input type="submit" class="close" value="Cerrar Session"></input>
                 </form>
             </div>
         </div>
@@ -84,7 +84,7 @@
 
     <div class="container__cards">
 
-        <div class="card">
+        <div class="cards">
             <div class="cover">
                 <!-- <img src="img/p1.png" alt=""> -->
                 <div class="img__back"></div>
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="cards">
             <div class="cover">
                 <!-- <img src="img/p2.png" alt=""> -->
                 <div class="img__back"></div>
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="cards">
             <div class="cover">
                 <!-- <img src="img/p3.png" alt=""> -->
                 <div class="img__back"></div>
