--- a/src/main/resources/templates/private/MyReservations.html
+++ b/src/main/resources/templates/private/MyReservations.html
@@ -40,7 +40,7 @@
                 <span class="user" id="name"></span>
                 <span>|</span>
                 <form th:action="@{/logout}" method="POST">
-                    <input type="submit" class="close" value="Logout"></input>
+                    <input type="submit" class="close" value="Cerrar Session"></input>
                 </form>
             </div>
         </div>
@@ -100,7 +100,7 @@
     <script>
         $(document).ready(function () {
             username();
-            listarReserva();
+            MisReservas();
         })
     </script>
     <div class="listar-Reserva" id="listadoReserva"></div>
