--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -18,7 +18,7 @@
             <div class="col-md-5">
                 <div class="card card-body">
                     <h3 class="text-center">Gracias por su visita!</h3>
-                    <a th:href="@{/}" class="btn btn-primary mt-3 m-auto">Inicio</a>
+                    <a th:href="@{/}" class="btn btn-primary mt-3 m-auto">Volver a LingStar</a>
                 </div>
             </div>
         </div>
