--- a/src/main/resources/static/css/styleHeader.css
+++ b/src/main/resources/static/css/styleHeader.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');*{
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
+*{
     margin: 0;
     padding: 0;
     text-decoration: none;
