--- a/src/main/resources/static/css/styleLogin.css
+++ b/src/main/resources/static/css/styleLogin.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
 
 #check{
     display: none;
@@ -13,15 +17,14 @@
 
 .banner-text{
     padding: 0 30px;
-    margin-top: 220px;
+    margin-top: 170px;
     text-align: center;
     color: #000;
 }
 
 .banner-text h1{
     text-align: center;
-    font-size: 50px;
-    margin-bottom: 30px;
+    font-size: 40px;
 }
 
 .banner-text span{
@@ -84,7 +87,6 @@
     box-shadow: 20px 20px 20px #1e1e1e, 
                 2px 2px 3px #282828;
     z-index: 1;
-
 }
 
 /*Cerar (X)*/
@@ -124,13 +126,12 @@ h1{
     font-weight: 500;
     padding: 10px;
     padding-top: 20px;
-    padding-bottom: 10px;
 }
 
 /*Cuadros de ingreso de datos*/
 .input-field .datos{
     margin-top: 10px;
-    padding: 20px;
+    padding: 17px;
     font-size: 15px;
     border-radius: 5px;
     border: none;
@@ -179,4 +180,34 @@ p{
 /*Registrate aqui*/
 .content .validate{
     color: seagreen;
+}
+
+/*Ventana modal*/
+form{
+    margin: auto;
+    width: 300px;
+    height: 400px;
+    z-index: 2;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    background: snow;
+    box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.50);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.alert-danger{
+    margin: auto;
+    padding: 15px;
+    background-color: rgba(244, 47, 25, 0.437);
+    max-width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
