--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,46 +1,83 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="stylesheet" href="../static/css/style.css">
-      <link rel="stylesheet" th:href="@{/css/style.css}">
+    <title>LingStar</title>
+    <!-- Meta Tags -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Estilos -->
+    <link rel="stylesheet" href="../static/css/styleLogin.css">
+    <link rel="stylesheet" th:href="@{/css/styleLogin.css}">
+    <link rel="shortcut icon" href="../static/img/LSbW.png">
+    <link rel="shortcut icon" th:href="@{/img/LSbW.png}">
+    <link rel="stylesheet" href="../static/css/styleWsp.css">
+    <link rel="stylesheet" th:href="@{/css/styleWsp.css}">
+    <link rel="stylesheet" href="../static/css/styleHeader.css">
+    <link rel="stylesheet" th:href="@{/css/styleHeader.css}">
+    <script src="https://kit.fontawesome.com/2cb25f2c39.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Bootstrap CSS
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 
 <body>
-    <div class="row justify-content-center mt-5">
-        <div class="col-lg-3">
-            <div th:if="${param.error}" class="alert alert-danger mb-3">
+    <header>
+        <nav class="wrapper">
+            <div>
+                <img class="logo" src="../static/img/LogocutWwithoutback.png">
+                <img class="logo" th:src="@{/img/LogocutWwithoutback.png}">
+            </div>
+            <input type="checkbox" id="check">
+            <label for="check" class="bar-btn">
+                <i class="fas fa-bars"></i>
+            </label>
+            <ul class="nav-menu">
+                <li><a th:href="@{/auth/register}">Registrarse</a></li>
+                <li><a th:href="@{/auth/login}">Ingresar</a></li>
+                <li><a th:href="@{/}">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- containt -->
+    <div class="banner-text">
+        <h1>Inicia Sesion</h1>
+        <br>
+    </div>
+
+    <div class="col-lg-12 align-content-center" >
+        <div class="row">
+            <div th:if="${param.error}" class="alert-danger">
                 Credenciales Incorrectas!
             </div>
-            <form method="POST" th:action="@{/auth/login-post}" name="formLogin">
-                <div class="row form-group mb-3">
-                    <label class="mb-2">Correo</label>
-                    <!-- Es necesario especificar el name como "username" para que Springboot realice su proceso de validacion de credenciales -->
-                    <input type="email" id="user_email" name="username" class="form-control input-login" required autofocus="autofocus">
+            <div class="col-lg-12">
+                
+                <div class="content">
+                    <form method="POST" th:action="@{/auth/login-post}" name="formLogin">
+                        <div class="input-field">
+                            <input class="datos" id="user_email" name="username" type="email" placeholder="Tu correo" required autofocus="autofocus">
+                            <input class="datos" id="user_password" type="password" name="password" placeholder="Tu contraseña" required autofocus="autofocus">
+                            <!-- <input class="second-button" type="submit" name="submit" value="Ingresar"> -->
+                            <button type="button" id="btn_login" class="second-button" onclick="validateLogin()">Iniciar Sesion</button>
+                        </div>
+                        <p> ¿no estas registrato?
+                            <a th:href="@{/auth/register}" class="validate">Registrate aquí!</a>
+                        </p>
+                    </form>
                 </div>
-                <div class="row form-group mb-3">
-                    <label class="mb-2">Password</label>
-                    <!-- Es necesario especificar el name como "password" para que Springboot realice su proceso de validacion de credenciales -->
-                    <input type="password" id="user_password" name="password" class="form-control input-login" required autofocus="autofocus">
-                </div>
-                <div class="row form-group">
-                    <button type="button" id="btn_login" class="btn btn-primary" onclick="validateLogin()">Iniciar Sesion</button>
-                    <!-- <input type="submit" class="btn btn-success" name="Continuar"></input> -->
-                </div>
-                <br>
-                <!-- <article>
-                    <label for="login"> Para iniciar con Github: <a href="/oauth2/authorization/github">Clic Aquí</a></label>
-                </article> -->
-            </form>
+            </div>
         </div>
-
     </div>
+
+    <!-- Boton de Whatsapp-->
+    <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+        class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
+    
     <!-- libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
