--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,69 +1,88 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang='es'>
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="stylesheet" href="../static/css/style.css">
-      <link rel="stylesheet" th:href="@{/css/style.css}">
+    <title>Lingstar</title>
+    <!-- Meta Tags -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Estilos -->
+
+    <link rel="shortcut icon" href="../static/img/LSbW.png">
+    <link rel="shortcut icon" th:href="@{/img/LSbW.png}">
+    <link rel="stylesheet" href="../static/css/styleWsp.css">
+    <link rel="stylesheet" th:href="@{/css/styleWsp.css}">
+    <link rel="stylesheet" href="../static/css/styleRegister.css">
+    <link rel="stylesheet" th:href="@{/css/styleRegister.css}">
+    <link rel="stylesheet" href="../static/css/styleHeader.css">
+    <link rel="stylesheet" th:href="@{/css/styleHeader.css}">
+    <script src="https://kit.fontawesome.com/2cb25f2c39.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Bootstrap CSS
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 
 <body>
-  <div class="row justify-content-center">
-    <div class="col-lg-6">
-      <form th:action="@{/auth/register}" th:object="${user}" method="POST" name="formRegister">
-        <div class="mb-3">
-          <h1>Registro</h1>
-        </div>
-        <div class="mb-3 input-register">
-          <label for="name" class="form-label">Nombres</label>
-          <input type="text" id="user_name_register" class="form-control" aria-describedby="emailHelp" th:field="*{name}" required
-            autofocus="autofocus">
-        </div>
-        <div class="mb-3 input-register">
-          <label for="lastName" class="form-label">Apellidos</label>
-          <input type="text" id="user_lastName_register" class="form-control" aria-describedby="emailHelp" th:field="*{lastName}" required
-            autofocus="autofocus">
-        </div>
-        <div class="mb-3 input-register">
-          <label for="tel" class="form-label">telefono</label>
-          <input type="number" id="user_tel_register" class="form-control" th:field="*{tel}" required autofocus="autofocus">
-        </div>
-        <div class="mb-3 input-register">
-          <label for="age" class="form-label">Edad</label>
-          <input type="number" id="user_age_register" class="form-control" th:field="*{age}" required autofocus="autofocus">
-        </div>
-        <div class="mb-3 input-register">
-          <label for="email" class="form-label">Correo</label>
-          <input type="email" id="user_email_register" class="form-control" th:field="*{email}" required autofocus="autofocus">
-        </div>
-        <div class="mb-3 input-register">
-          <label for="password" class="form-label">Contraseña</label>
-          <input type="password" id="user_password_register" class="form-control" th:field="*{password}" required autofocus="autofocus">
-        </div>
-        <div class="mb-3 input-register">
-          <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-          <input type="password" id="user_confirmPassword_register" class="form-control" required autofocus="autofocus">
-        </div>
-        <button type="button" class="btn btn-primary" onclick="validateRegister()">Registrar</button>
-        <!-- <input type="submit" class="btn btn-primary" name="Continuar"></input> -->
-      </form>
-    </div>
-  </div>
+    <header>
+        <nav class="wrapper">
+            <div>
+                <img class="logo" src="../static/img/LogocutWwithoutback.png">
+                <img class="logo" th:src="@{/img/LogocutWwithoutback.png}">
+            </div>
+            <input type="checkbox" id="check">
+            <label for="check" class="bar-btn">
+                <i class="fas fa-bars"></i>
+            </label>
+            <ul class="nav-menu">
+                <li><a th:href="@{/auth/register}">Registrarse</a></li>
+                <li><a th:href="@{/auth/login}">Ingresar</a></li>
+                <li><a th:href="@{/}">Home</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- libraries -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-  <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/webjars/sweetalert2/dist/sweetalert2.min.js"></script>
-  <!-- functions.js -->
-  <script type="text/javascript" th:src="@{/js/Functions.js}"></script>
-  <script src="../static/js/Functions.js"></script>
+    <form th:action="@{/auth/register}" th:object="${user}" method="POST" name="formRegister">
+        <div class="titulo">
+            <h1>Formulario de Registro</h1>
+        </div>
+        <div class="formulario">
+            <p>Nombres<input class="datos" id="user_name_register" type="text" placeholder="Tu nombre"
+                    th:field="*{name}" required autofocus="autofocus"></p>
+            <p>Apellidos <input class="datos" id="user_lastName_register" type="text" placeholder="Tu apellido"
+                    th:field="*{lastName}" required autofocus="autofocus"></p>
+            <p>Número de contacto <input class="datos" id="user_tel_register" type="number" placeholder="Tu número"
+                    th:field="*{tel}" required autofocus="autofocus"></p>
+            <p>Edad actual<input class="datos" id="user_age_register" type="number" placeholder="Tu Edad" th:field="*{age}"
+                    required autofocus="autofocus"></p>
+            <p>Correo Electronico <input class="datos" id="user_email_register" type="email" placeholder="Tu correo"
+                    th:field="*{email}" required autofocus="autofocus"></p>
+            <p>Contraseña <input class="datos" id="user_password_register" type="password" placeholder="Tu contraseña"
+                    th:field="*{password}" required autofocus="autofocus"></p>
+            <p>Confirmacion de Contraseña <input class="datos" id="user_confirmPassword_register" type="password"
+                    placeholder="Confirma tu contraseña" required autofocus="autofocus"></p>
+            <!-- <input class="button_validate" type="submit" value="Registrarse"> -->
+            <button type="button" class="button_validate" onclick="validateRegister()">Registrar</button>
+        </div>
+    </form>
+
+
+    <!-- Boton de Whatsapp-->
+    <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+        class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
+
+    <!-- libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/webjars/sweetalert2/dist/sweetalert2.min.js"></script>
+    <!-- functions.js -->
+    <script type="text/javascript" th:src="@{/js/Functions.js}"></script>
+    <script src="../static/js/Functions.js"></script>
 </body>
 
 </html>
