--- a/src/main/resources/templates/private/Reservations.html
+++ b/src/main/resources/templates/private/Reservations.html
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="titulo-Reserva">
-                        <h1>RESERVA</h1>
+                        <h1>RESERVAR</h1>
                     </div>
                     <div class="formulario-Reserva">
                         <!-- <form th:action="@{Reservations}" th:object="${reservation}" method="POST" name="formSaveReservation"> -->
