--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,16 +23,15 @@
     <!--footer-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
         <nav class="wrapper">
             <div>
-                <img class="logo" src="../static/img/LogocutWwithoutback.png">
-                <img class="logo" th:src="@{/img/LogocutWwithoutback.png}">
+                <a th:href="@{/}"><img class="logo" th:src="@{/img/LogocutWwithoutback.png}"></a>
             </div>
             <input type="checkbox" id="check">
             <label for="check" class="bar-btn">
@@ -41,66 +40,62 @@
             <ul class="nav-menu">
                 <li><a th:href="@{/auth/register}">Registrarse</a></li>
                 <li><a th:href="@{/auth/login}">Ingresar</a></li>
-                <li><a th:href="@{/auth/register}">Home</a></li>
             </ul>
         </nav>
     </header>
+
     <section>
         <div class="main-text">
             <div class="col-lg-12">
-                <div class="row">
-                    <div class="col-md-6">
+                <div class="row" style="height: 550px">
+                    <div class="col-lg-6">
                         <h1> BIENVENIDO A LINGSTAR</h1>
-                        <p>Lingstar es una pequeña plataforma de búsqueda
-                            para agendamiento hotelero, que tiene como 
-                            objetivo proporcionar un servicio de calidad
-                            en el que cada usuario mantenga una búsqueda
-                            estable y funcional a la hora de agendar una
-                            cita para hospedarse.
+                        <p>Lingstar es una pequeña plataforma de reserva habitacional para agendamiento hotelero, 
+                            que tiene como objetivo proporcionar un servicio de calidad en el que cada usuario mantenga 
+                            una búsqueda estable y funcional a la hora de agendar una cita para hospedarse en una habitacion.
                         </p>
+                        <a class="login-content" th:href="@{/auth/login}">Reservar ahora!</a>
                     </div>
-                    <div class="col-md-6">
-                        <div class="img-box">
-                            <!-- <img src="../static/img/backshapeee.png" class="back-img"> -->
-                            <img class="back-img" th:src="@{/img/backshapeee.png}">
-                            <!-- <img src="../static/img/lapim.png" class="main-img"> -->
-                            <img class="main-img" th:src="@{/img/lapim.png}">
+                    <div class="col-lg-6">
+                        <div class="asd">
+                            <img class="qwe-img" th:src="@{/img/backshapeee.png}">
+                            <img class="ewq-img" th:src="@{/img/lapim.png}">
                         </div>
                     </div>
+                    </div>
+                    
                     </div>
                 </div>
             </div>
         </div>
-        
-       
     </section>
-
 
     <section>
-        
         <div class="content-section">
-                <div class="title">
-                    <h1>¿Porqué LingStar?</h1>
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="image-section">
+                            <img th:src="@{/img/description2.svg}">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="title">
+                            <h1>¿Porqué LingStar?</h1>
+                        </div>
+                        <div class="content">
+                                <p>Con el uso de Lingstar ya no va a ser necesario el realizar agendamientos presenciales que por lo 
+                                    general tomarán más tiempo, podrás agendar en el hotel seleccionando una habitación realmente cómoda 
+                                    pasar esas vacaciones inolvidables.
+                                </p>
+                                <h3>Somos tu mejor opción.</h3>
+                        </div>
+                    </div>
                 </div>
-                <div class="content">
-                        <p>Con el uso de Lingstar ya no va a ser necesario 
-                            el realizar agendamientos preseciales que por lo 
-                            general tomarán más tiempo, podrás agendar en el 
-                            hotel seleccionando una habitación realmente cómoda 
-                            pasar esas vacaciones inolvidables o las cálidas 
-                            vacaciones familiares.
-                        </p>
-                        <h3>Somos tu mejor opción.</h3>
-                            
-                </div>
-                <div class="image-section">
-                    <!-- <img src="../static/img/bodyimage.jpg"> -->
-                    <img th:src="@{/img/bodyimage.jpg}">
-                </div>
-                 
+            </div>
         </div>
-
     </section>
+
     <section>
         <footer>
             <div class="footer-content">
