--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -8,8 +8,6 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="stylesheet" href="../static/css/style.css">
-      <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 
 <body>
@@ -17,7 +15,8 @@
         <div class="row justify-content-center">
             <div class="col-md-5">
                 <div class="card card-body">
-                    <h3 class="text-center">Gracias por su visita!</h3>
+                    <h3 class="text-center">Gracias por preferirnos!</h3>
+                    <img style="height: 380px; width: auto;" th:src="@{/img/img-logout.svg}">
                     <a th:href="@{/}" class="btn btn-primary mt-3 m-auto">Volver a LingStar</a>
                 </div>
             </div>
